--- a/index.html
+++ b/index.html
@@ -731,8 +731,8 @@ form .campos .input-Campo{
                 <label for="permissao">ACESSO:</label>
                 <select id="tipoPermis" name="tipoPermis">
                     <option value="(-)">ESCOLHA UMA OPÇÃO</option>
-                    <option value="PRAIA">Acesso</option>
-                    <option value="NÁUTICA">NÁUTICA/ Acesso</option>
+                    <option value="Acesso">Acesso</option>
+                    <option value="NÁUTICA/ Acesso">NÁUTICA/ Acesso</option>
                     <option value="PESCA">PESCA</option>
                 </select>
             </div>
