--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ form .campos .input-Campo{
         }
 
         .linhaPermis1OSup{
-            width: 135px;  
+            width: 153px;  
             height: 1px; 
             background-color: black;
             position: absolute; 
@@ -390,7 +390,7 @@ form .campos .input-Campo{
             left: 8px;
         }         
         .linhaPermis1OInf{
-            width: 135px;  
+            width: 153px;  
             height: 1px; 
             background-color: black;
             position: absolute; 
@@ -403,7 +403,7 @@ form .campos .input-Campo{
             background-color: black; 
             position: absolute; 
             top: 135px;  
-            left: 143px; 
+            left: 160px; 
         }
         .linhaPermis2VEs {
             width: 1px;  
@@ -551,7 +551,7 @@ form .campos .input-Campo{
         .tipoPermis{
             position: absolute;
             top: 122px;
-            left: 40px;
+            left: 15px;
         }
         .respCpf{
             position: absolute;
@@ -731,8 +731,8 @@ form .campos .input-Campo{
                 <label for="permissao">ACESSO:</label>
                 <select id="tipoPermis" name="tipoPermis">
                     <option value="(-)">ESCOLHA UMA OPÇÃO</option>
-                    <option value="Acesso">Acesso</option>
-                    <option value="NÁUTICA/ Acesso">NÁUTICA/ Acesso</option>
+                    <option value="ACESSO">ACESSO</option>
+                    <option value="NÁUTICA/ ACESSO">NÁUTICA/ ACESSO</option>
                     <option value="PESCA">PESCA</option>
                 </select>
             </div>
