--- a/index.html
+++ b/index.html
@@ -731,9 +731,9 @@ form .campos .input-Campo{
                 <label for="permissao">ACESSO:</label>
                 <select id="tipoPermis" name="tipoPermis">
                     <option value="(-)">ESCOLHA UMA OPÇÃO</option>
-                    <option value="ACESSO">ACESSO</option>
-                    <option value="NÁUTICA/ ACESSO">NÁUTICA/ ACESSO</option>
-                    <option value="PESCA">PESCA</option>
+                    <option value="PRAIA">PRAIA</option>
+                    <option value="NÁUTICA/PRAIA">NÁUTICA/PRAIA</option>
+                    <option value="PESCA/PRAIA">PESCA/PRAIA</option>
                 </select>
             </div>
 
